# pixi-build-backends

./: .gitignore  Cargo.toml  pixi.toml
.github/workflows/: build-upload.yml  python-bindigs.yml  python-bindings.yml  rattler-build.yml  testsuite.yml
backends/pixi-build-ros/: .gitignore  README.md  pixi.toml  pyproject.toml  robostack.yaml
backends/pixi-build-ros/src/pixi_build_ros/: build_script.py  distro.py  ros_generator.py  utils.py
backends/pixi-build-ros/templates/: build_ament_cmake.sh.in  build_ament_python.sh.in  build_catkin.sh.in
backends/pixi-build-ros/tests/: test_package_xml.py
backends/pixi-build-ros/tests/data/package_xmls/: demo_nodes_cpp.xml
crates/pixi-build/: Cargo.toml
crates/pixi-build-backend/src/: generated_recipe.rs  intermediate_backend.rs  specs_conversion.rs  tools.rs
crates/pixi-build-backend/tests/integration/: protocol.rs
crates/pixi-build-basic/: Cargo.toml
crates/pixi-build-basic/src/: config.rs  main.rs
crates/pixi-build-basic/src/snapshots/: pixi_build_basic__tests__input_globs_includes_extra_globs.snap
crates/pixi-build-cmake/: pixi.toml
crates/pixi-build-cmake/src/: build_script.j2  build_script.rs  main.rs
crates/pixi-build-cmake/src/snapshots/: pixi_build_cmake__build_script__test__build_script@unix-nopython-with-extra-args.snap  pixi_build_cmake__build_script__test__build_script@unix-nopython.snap  pixi_build_cmake__build_script__test__build_script@unix-python-2.snap  pixi_build_cmake__build_script__test__build_script@unix-python-no-extra-args.snap  pixi_build_cmake__build_script__test__build_script@windows-nopython-no-extra-args.snap  pixi_build_cmake__build_script__test__build_script@windows-nopython-with-extra-args.snap  pixi_build_cmake__build_script__test__build_script@windows-python-2.snap  pixi_build_cmake__build_script__test__build_script@windows-python-with-extra-args.snap
crates/pixi-build-mojo/src/: main.rs
crates/pixi-build-mojo/src/snapshots/: pixi_build_mojo__tests__max_is_not_added_if_max_is_already_present.snap  pixi_build_mojo__tests__mojo_bin_is_set.snap  pixi_build_mojo__tests__mojo_pkg_is_set.snap
crates/pixi-build-python/src/: main.rs
crates/pixi-build-rattler-build/src/: protocol.rs
crates/pixi-build-rust/: Cargo.toml
crates/pixi-build-rust/src/: config.rs  main.rs  metadata.rs
crates/pixi-build/src/: build_types_ext.rs  cli.rs  dependencies.rs  lib.rs
crates/recipe-stage0/src/: marked_yaml.rs  matchspec.rs  recipe.rs
docs/backends/: pixi-build-mojo.md
py-pixi-build-backend/: pixi.toml
py-pixi-build-backend/pixi_build_backend/types/: conditional.py  generated_recipe.py  intermediate_recipe.py  item.py  requirements.py
py-pixi-build-backend/src/: lib.rs
py-pixi-build-backend/src/recipe_stage0/: conditional.rs  conditional_requirements.rs  recipe.rs  requirements.rs
py-pixi-build-backend/src/types/: generated_recipe.rs
py-pixi-build-backend/tests/unit/: test_conditional.py  test_generated_recipe.py  test_intermediate_recipe.py
recipe/: pixi_build_cmake.yaml  pixi_build_python.yaml  pixi_build_rattler_build.yaml
recipe/pixi-build-api-version/: pixi-build-api-version-1-h4616a5c_0.conda  pixi.toml  recipe.yaml
scripts/: generate_version_matrix.py
