[project]
dependencies = [
  "rosdistro",
  "catkin_pkg",
  "pytest",
  "toml",
  "pyyaml",
  "distutils",
]
name = "pixi-build-ros"
requires-python = "== 3.11"
version = "0.1.1"

[project.scripts]
pixi-build-ros = "pixi_build_ros.main:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
